--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="assets/favicon.ico" rel="shortcut icon" />
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="../style.css" />
         <title>Virtual Keyboard</title>
     </head>
     <body> 
-        <script type="module" src="/main.js"></script>
+        <script type="module" src="../main.js"></script>
     </body>
         
